--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,13 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8u171-jdk
-    
+      - image: circleci/mysql:5.7
+        environment:
+        - MYSQL_ROOT_PASSWORD: password
+        - MYSQL_DATABASE: stocks
+        - MYSQL_USER: monty
+        - MYSQL_PASSWORD: some_pass
+   
     working_directory: ~/Web-Application
 
     environment:
